2004-03-16  Ilja Booij  <ilja@ic-s.nl>

	* mime.c: removed mime_list() function because it was unused.

	* mime.h: removed mime_list() function because it was unused.

2004-03-15  Ilja Booij  <ilja@ic-s.nl>

	* mysql/dbmysql.c: added quotes around TO_DATE string

	* db.c (db_insert_physmessage_with_internal_date): removed the
	quotes that Aaron has just put in. They've moved to dbmysql.c to
	make sure PostgreSQL handling does not break.
	(db_send_message_lines): a db_get_length() call asked for the length
	of field 2 (3rd field), while there was only one field in the result
	set.

2004-03-14  Aaron Stone <aaron@serendipity.cx>

	* db.c: MySQL 4.0.14 or higher required for INSERT ... SELECT!

	* db.c (db_imap_append_msg): changed from db_check_sizelimit to
	db_check_quotum_used, eliminating three related queries.
	(db_check_quotum_used): added function to check, in just one
	query, if a user has a maxmail quotum and if a message of the
	specified size would exceed that quotum or not.
	(db_copymsg): rewritten to use the db_check_quotum_used function,
	and to use a single INSERT INTO ... SELECT FROM query, and to use
	the canonical create_unique_id function and rather than its own.
	(db_insert_physmessage_with_internal_date): fixed missing quotes.

	* dsn.c (dsnuser_free_list): added function to free a list
	containing dsnuser structures, followed by freeing the list itself.
	(dsnuser_worstcase_list): added function to find the worst
	delivery condition from a list of dsnusers.
	(dsnuser_worstcase_int): added function to find the worst
	delivery condition from three indicators: OK, TEMP, FAIL.

	* main.c (main): now uses the dsnuser_worstcase functions.

	* pipe.c (insert_messages): now uses the dsnuser_worstcase functions.

	* sort/sort.c (sort_and_deliver): return type is now dsn_class_t,
	which provides a better indicator of the success or failure of
	the delivery.

2004-03-12  Ilja Booij  <ilja@ic-s.nl>
